// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 0 submissions 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Circle
        borderWidth={0}
        color="#00e0ff"
        formatText={[Function]}
        progress={0.000001}
        showsText={true}
        size={70}
        textStyle={
          Object {
            "color": "#2D3B45",
          }
        }
        thickness={7}
        unfilledColor="#F5F5F5"
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "flex": 1,
            "fontSize": 12,
            "marginTop": 8,
            "textAlign": "center",
          },
        ]
      }
    >
      Graded
    </Text>
  </View>
</View>
`;

exports[`render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Circle
        borderWidth={0}
        color="#00e0ff"
        formatText={[Function]}
        progress={0.25}
        showsText={true}
        size={70}
        textStyle={
          Object {
            "color": "#2D3B45",
          }
        }
        thickness={7}
        unfilledColor="#F5F5F5"
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "flex": 1,
            "fontSize": 12,
            "marginTop": 8,
            "textAlign": "center",
          },
        ]
      }
    >
      Graded
    </Text>
  </View>
</View>
`;

exports[`render multiple data points  1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Circle
        borderWidth={0}
        color="#00e0ff"
        formatText={[Function]}
        progress={0.1}
        showsText={true}
        size={70}
        textStyle={
          Object {
            "color": "#2D3B45",
          }
        }
        thickness={7}
        unfilledColor="#F5F5F5"
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "flex": 1,
            "fontSize": 12,
            "marginTop": 8,
            "textAlign": "center",
          },
        ]
      }
    >
      Graded
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Circle
        borderWidth={0}
        color="#00e0ff"
        formatText={[Function]}
        progress={0.2}
        showsText={true}
        size={70}
        textStyle={
          Object {
            "color": "#2D3B45",
          }
        }
        thickness={7}
        unfilledColor="#F5F5F5"
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "flex": 1,
            "fontSize": 12,
            "marginTop": 8,
            "textAlign": "center",
          },
        ]
      }
    >
      Ungraded
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Circle
        borderWidth={0}
        color="#00e0ff"
        formatText={[Function]}
        progress={0.3}
        showsText={true}
        size={70}
        textStyle={
          Object {
            "color": "#2D3B45",
          }
        }
        thickness={7}
        unfilledColor="#F5F5F5"
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "flex": 1,
            "fontSize": 12,
            "marginTop": 8,
            "textAlign": "center",
          },
        ]
      }
    >
      Not Submitted
    </Text>
  </View>
</View>
`;
